--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+
+:root {
+    --primario: #D1241F;
+    --secundario: #204167;
+    --negro: #000000;
+    --blanco: #ffffff;
+}
+
 body {
     font-family: "Quicksand", sans-serif;
 }
@@ -143,17 +151,18 @@ body {
     margin-bottom: 2rem;
 }
 
-.cardHijo a {
-    text-decoration: none;
+.cardHijo button {
     color: #f8fbff;
     background-color: #d1241f;
     font-weight: bold;
     padding: 0.5rem 1rem;
     border-radius: 20px;
     transition: all 0.3s ease-in-out;
+    border: none;
+    cursor: pointer;
 }
 
-.cardHijo a:hover {
+.cardHijo button:hover {
     background-color: #0c1928;
 }
 
@@ -296,4 +305,561 @@ figure.testimonial:nth-child(even) p {
 
 .contacto__boton:hover {
     background-color: #0c1928;
+}
+
+
+/* ! POP UPS */
+
+/* * Generales */
+
+.popUp {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+}
+
+.popUp__contenedor {
+    width: 85%;
+    height: 600px;
+    background-color: var(--blanco);
+    border-radius: 20px;
+    position: relative;
+    transform: translateY(-150%);
+    transition: 0.5s;
+    padding: 50px 40px;
+}
+
+.popUp__contenido {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    overflow-y: auto;
+    padding-right: 5px;
+}
+
+.popUp__contenido::-webkit-scrollbar {
+    width: 10px;
+    background: transparent;
+    overflow: hidden;
+}
+
+.popUp__contenido::-webkit-scrollbar-thumb {
+    background: var(--secundario);
+    border-radius: 8px;
+    border-right: 0.2rem solid var(--blanco);
+}
+
+.popUp__btnCerrar {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    cursor: pointer;
+    border: none;
+    background-color: var(--negro);
+    transition: 0.3s;
+    color: var(--blanco);
+    position: absolute;
+    right: -10px;
+    top: -10px;
+}
+
+.popUp__btnCerrar:hover {
+    background-color: var(--primario);
+}
+
+.dropdown__fondo {
+    background-color: transparent;
+    border-radius: 20px 20px 0 0;
+}
+
+.dropdown__contenido {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    font-weight: 600;
+}
+
+.dropdown__i {
+    font-size: 20px;
+    color: var(--secundario);
+    transition: 0.3s;
+}
+
+.dropdown__item {
+    background-color: #E7E7E7;
+    border-radius: 20px;
+    padding: 15px 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.dropdown__circulo {
+    border-radius: 50%;
+    background-color: var(--secundario);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 35px;
+    height: 35px;
+    color: var(--blanco);
+    transition: 0.3s;
+}
+
+.dropdown__circulo--rotado {
+    transform: rotate(-180deg);
+}
+
+.dropdown__item--desplegado {
+    background-color: var(--secundario);
+    color: var(--blanco);
+}
+
+.dropdown__item--desplegado .dropdown__i {
+    color: var(--blanco);
+}
+
+.dropdown__item--desplegado .dropdown__circulo {
+    color: var(--secundario);
+    background-color: var(--blanco);
+}
+
+.dropdown__collapse {
+    background-color: #E7E7E7;
+    height: 0;
+    overflow: hidden;
+    transition: 0.3s;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.dropdown__desplegable {
+    padding: 25px;
+}
+
+/* * Animacion */
+
+.popUpAnimacion .popUp__contenedor {
+    transform: translateY(0%);
+}
+
+
+/* ! Contable Laboral */
+
+/* * Portada */
+
+.portada {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
+
+.portada__contenido {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.portada__a {
+  padding: 8px 15px;
+  background-color: #d1241f;
+  text-decoration: none;
+  border-radius: 25px;
+  color: var(--blanco);
+  font-weight: 600;
+  display: flex;
+  gap: 10px;
+  width: min-content;
+  transition: 0.3s;
+}
+
+.portada__a:hover {
+  background-color: #0c1928;
+}
+
+.portada__h3, .portada__p {
+  margin: 0;
+}
+
+.portada__h3 {
+  font-size: 1.5rem;
+}
+
+/* * Sistemas Administrativos del IGV */
+
+.sectIgv {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.sectIgv__titulo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.sectIgv__h3 {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.sectIgv__objetivo {
+  display: flex;
+  justify-content: space-around;
+}
+
+.sectIgv__h4 {
+  font-size: 18px;
+  margin: 0;
+}
+
+.sectIgv__p {
+  margin: 0;
+}
+
+.sistema {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.sistema__nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  gap: 25px;
+}
+
+.sistema__li {
+  border-radius: 25px;
+  padding: 8px 12px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+  .sistema__li:hover {
+      color: var(--secundario);
+  }
+
+  .sistema__li--activo {
+      background-color: var(--secundario);
+      color: var(--blanco);
+      cursor: default;
+  }
+
+  .sistema__li--activo:hover{
+      color: var(--blanco);
+  }
+
+.sistema__slider {
+  width: 100%;
+  overflow: hidden;
+}
+
+.sistema__contenedor {
+  width: 300%;
+  transition: 0.5s;
+  display: flex;
+}
+
+.sistema__slide {
+  width: 33.3%;
+  padding: 20px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.sistema__circulo {
+  border-radius: 50%;
+  background-color: var(--blanco);
+  box-shadow: 2px 2px 15px #DDDDDD;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 130px;
+  height: 130px;
+  padding: 10px;
+  text-align: center;
+}
+
+.sistema__group {
+  display: flex;
+  justify-content: space-between;
+}
+
+  .sistema__group--center {
+      display: flex;
+      justify-content: center;
+  }
+
+.sistema__arrow {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.sistema__span {
+  position: absolute;
+  left: -15px;
+  transform: translateX(-100%);
+}
+
+  .sistema__span--derecha {
+      transform: translateX(100%);
+  }
+
+.sistema__flecha {
+  height: 150px;
+  width: 3px;
+  border-radius: 10px;
+  background-color: var(--negro);
+  position: relative;
+}
+
+  .sistema__flecha::after {
+      content: "";
+      position: absolute;
+      background-color: var(--negro);
+      height: 10px;
+      width: 3px;
+      border-radius: 10px;
+      top: -2px;
+      left: -3px;
+      transform: rotate(45deg);
+  }
+
+  .sistema__flecha::before {
+      content: "";
+      position: absolute;
+      background-color: var(--negro);
+      height: 10px;
+      width: 3px;
+      border-radius: 10px;
+      top: -2px;
+      right: -3px;
+      transform: rotate(-45deg);
+  }
+
+  .sistema__flecha--abajo::after {
+      top: 142px;
+      left: -3px;
+      transform: rotate(-45deg);
+  }
+
+  .sistema__flecha--abajo::before {
+      top: 142px;
+      right: -3px;
+      transform: rotate(45deg);
+  }
+
+
+.sistema__col2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+/* * Calculadora */
+
+.calculadora {
+  width: 200px;
+  box-shadow: 2px 2px 15px #DDDDDD;
+  padding: 20px;
+  background-color: var(--blanco);
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.calculadora__campo {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 30px;
+  align-items: center;
+}
+
+  .calculadora__campo--total {
+      margin-top: 10px;
+      font-weight: 600;
+  }
+
+.calculadora__numero {
+  text-align: end;
+}
+
+  .calculadora__numero--input {
+      width: 100%;
+      text-align: end;
+      border-radius: 5px;
+      border: none;
+      background-color: #f3f3f3;
+      padding: 5px;
+      border: 2px solid transparent;
+      transition: 0.3s;
+  }
+
+      .calculadora__numero--input:focus {
+          outline: none;
+          border-bottom: 2px solid var(--secundario);
+      }
+
+
+.calculadora__span--rojo {
+  color: var(--primario);
+  font-weight: 500;
+}
+
+.calculadora__span--azul {
+  color: var(--secundario);
+}
+
+
+.sistema__beneficiario {
+  padding: 24px;
+  border-radius: 15px;
+  background-color: var(--blanco);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.sistema__b1 {
+  color: var(--primario);
+  font-weight: 500;
+}
+
+.sistema__b2 {
+  color: var(--secundario);
+  font-weight: 500;
+}
+
+.sistema__h4, .sistema__p {
+  margin: 0;
+}
+
+
+/* ! NUESTRO EQUIPO */
+
+.container--equipo {
+  margin-top: 6rem;
+  gap: 60px;
+}
+
+.cardEquipo {
+  width: 280px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  border-radius: 60px;
+  box-shadow: 2px 2px 15px #d6d6d6;
+  position: relative;
+  padding-top: 85px;
+}
+
+.cardEquipo__picture {
+  position: absolute;
+  top: 0;
+  width: 130px;
+  height: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  border-radius: 50%;
+  background-color: var(--blanco);
+  box-shadow: 2px 2px 15px #d6d6d6;
+  transform: translateY(-50%);
+}
+
+.cardEquipo__picture--2 {
+  width: 110px;
+  height: 110px;
+  display: flex;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.cardEquipo__img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.cardEquipo__div {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  padding: 0 20px;
+  width: calc(100% - 40px);
+}
+
+.cardEquipo__h3, .cardEquipo__p {
+  margin: 0;
+}
+
+.cardEquipo__p {
+  padding: 0 20px;
+}
+
+.cardEquipo__span {
+  font-weight: 500;
+}
+
+.cardEquipo__redes {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0;
+  background-color: var(--primario);
+  margin: 0;
+  padding: 10px 5px;
+  width: calc(100% - 10px);
+  border-radius: 0 0 60px 60px;
+}
+.cardEquipo__a {
+  border-radius: 50%;
+  background-color: #ececec;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+  text-decoration: none;
+  color: var(--negro);
+}
+
+  .cardEquipo__a:hover {
+      background-color: var(--secundario);
+  }
+  .cardEquipo__a:hover .cardEquipo__i {
+      color: var(--blanco);
+  }
+
+
+.cardEquipo__i {
+  transition: 0.3s;
+}
+
+.fa-whatsapp {
+  font-size: 20px;
 }
