--- a/style.css
+++ b/style.css
@@ -982,6 +982,36 @@ img {
   font-weight: 500;
 }
 
+.footer{
+  margin-top: 30px;
+  height: 250px;
+  display: flex;
+  background-color: #444444;
+  justify-content: right;
+  align-items: center;
+  color: #fff;
+  gap: 100px;
+}
+
+.footer p{
+  color: #8f8f8f;
+  font-size: 18px;
+}
+
+.footer a{
+  color: #8f8f8f;
+  text-decoration: none;
+}
+
+.footer a:hover{
+  color: #fff;
+}
+
+.container__footer{
+  width: 24%;
+}
+
+
 @media (max-width: 800px) {
   .whatsapp-button-container__text {
     display: none;
